--- a/packages/excalidraw/components/MobileToolBar.scss
+++ b/packages/excalidraw/components/MobileToolBar.scss
@@ -54,7 +54,7 @@
     min-width: 160px;
     max-height: 50vh;
     overflow-y: auto;
-    z-index: var(--zIndex-layerUI);
+    z-index: var(--zIndex-ui-styles-popup);
   }
 
   .mobile-toolbar-separator {
