--- a/packages/excalidraw/components/ToolPopover.scss
+++ b/packages/excalidraw/components/ToolPopover.scss
@@ -10,7 +10,7 @@
     background: var(--island-bg-color);
     box-shadow: var(--shadow-island);
     padding: 0.5rem;
-    z-index: var(--zIndex-layerUI);
+    z-index: var(--zIndex-ui-styles-popup);
     max-width: 200px;
   }
 
